Fixed gap in jumbotron

--- a/css/conm.css
+++ b/css/conm.css
@@ -1,3 +1,4 @@
+body {padding-top: 50px;}
 .jumbotron {position:relative;background-image: url(../conm/conm.jpg); background-size:cover; background-position: center 75%; background-repeat:no-repeat; background-attachment: local; color:#fff; text-shadow: 2px 2px 3px rgba(0,0,0,.5);}
 .fa-external-link {position:absolute; top:10px; right:10%; color:white;}
 .caption {display:inline-block; text-align: center; height:4em;}
